[gd_scene load_steps=3 format=2]

[ext_resource path="res://levels/common/lobby/Join.gd" type="Script" id=1]
[ext_resource path="res://levels/common/lobby/Host.gd" type="Script" id=2]

[node name="PreLobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabContainer" type="TabContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Join" type="Tabs" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
script = ExtResource( 1 )

[node name="JoinButton" type="Button" parent="TabContainer/Join"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -956.0
margin_top = -251.0
margin_bottom = 251.0
text = "Join Server"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JoinStatus" type="Label" parent="TabContainer/Join"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -318.0
margin_top = -146.0
margin_right = 318.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JoinAddress" type="LineEdit" parent="TabContainer/Join"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -89.0
margin_right = 416.0
margin_bottom = 89.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Host" type="Tabs" parent="TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
script = ExtResource( 2 )

[node name="HostButton" type="Button" parent="TabContainer/Host"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -956.0
margin_top = -251.0
margin_bottom = 251.0
text = "Host Server"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HostIP" type="Label" parent="TabContainer/Host"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 39.0
margin_top = -89.0
margin_right = 455.0
margin_bottom = 89.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HostingStatus" type="Label" parent="TabContainer/Host"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -298.5
margin_top = -146.0
margin_right = 337.5
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="TabContainer/Join/JoinButton" to="TabContainer/Join" method="_on_JoinButton_pressed"]
[connection signal="pressed" from="TabContainer/Host/HostButton" to="TabContainer/Host" method="_on_HostButton_pressed"]
